@startuml MoneyTracking_ClassDiagram
' ============================================================
' Money Tracking - UML Class Diagram (Professional Final v3)
' Layout:  3 stacked rows  ->  Console (top) | Services (mid) | Domain (bottom)
' ============================================================

' ---------- Global ----------
skinparam shadowing false
skinparam defaultFontName "Helvetica"
skinparam defaultFontSize 11
skinparam defaultFontColor #2C3E50

' Spacing
skinparam nodesep 60
skinparam ranksep 85
skinparam lineWidth 1.2

' Background
skinparam backgroundColor #FAFBFC

' Arrows
skinparam ArrowColor #5D6D7E
skinparam ArrowThickness 1.3
skinparam linetype ortho
skinparam MessageAlign center

' ---------- Package ----------
skinparam package {
    BackgroundColor #FFFFFF
    BorderColor     #BFC9CA
    FontSize        12
    FontStyle       bold
    BorderThickness 1.2
}

' ---------- Class ----------
skinparam class {
    BackgroundColor     #FFFFFF
    BorderColor         #34495E
    BorderThickness     1.3
    FontSize            11
    AttributeFontSize   10
    AttributeFontColor  #2C3E50
    ArrowColor          #34495E
}

skinparam classAttributeIconSize 0

' ---------- Enum ----------
skinparam enum {
    BackgroundColor     #F4ECF7
    BorderColor         #8E44AD
    BorderThickness     1.3
    FontSize            11
    FontColor           #6C3483
    AttributeFontSize   10
    AttributeFontColor  #5B2C6F
}

' ---------- Note ----------
skinparam note {
    BackgroundColor #FFFFCC
    BorderColor     #DAA520
    BorderThickness 1
    FontSize        10
    FontColor       #7D6608
}

' ============================================================
' ROW 1 (TOP)  -  CONSOLE UI
' ============================================================
package "MoneyTracking (Console UI)" as ConsoleApp {

    class "Program\n(Top-Level)" as Program {
        ===  MENU ACTION METHODS  ===
        + {static} ShowItems(coll)
        + {static} AddOrChooseType(coll)
        + {static} EditOrRemove(coll)
        + {static} SortItems(coll)
        + {static} FilterItems(coll)
        + {static} SearchItems(coll)
        + {static} EditItem(coll)
        + {static} RemoveItem(coll)
        + {static} AddItem(coll, type: ItemType)
        + {static} ExportToCsv(coll)
        ===  DISPLAY METHODS  ===
        + {static} PrintList(items: MoneyItem[])
        ===  INPUT HELPER METHODS  ===
        + {static} PromptNonEmpty(p): string
        + {static} PromptDecimal(p): decimal
        + {static} PromptMonth(p): int
        + {static} PromptSortField(): SortField
        + {static} PromptItemType(): ItemType
        + {static} PromptOptionalMonth(): int?
    }
}

' ============================================================
' ROW 2 (MIDDLE)  -  SERVICES
' ============================================================
package "MoneyTracking.Services" as Services {

    class "JsonPersistence\n(static)" as JsonPersistence {
        ===  FIELDS  ===
        - _options : JsonSerializerOptions
        - _readOptions : JsonSerializerOptions
        ===  STATIC METHODS  ===
        + {static} Save(items: MoneyItem[], path): void
        + {static} Load(path: string): MoneyItem[]
    }

    class ItemCollection {
        ===  FIELD  ===
        - _items : List<MoneyItem>
        ===  COMMAND METHODS  ===
        + Add(item: MoneyItem) : void
        + Remove(id: Guid) : bool
        + Replace(id, updated: MoneyItem) : void
        ===  QUERY METHODS  ===
        + GetAll() : MoneyItem[]
        + GetSorted(f: SortField, asc: bool) : MoneyItem[]
        + GetFiltered(t: ItemType) : MoneyItem[]
        + GetFiltered(t: ItemType, m: int?) : MoneyItem[]
        + GetByKeyword(kw: string) : MoneyItem[]
    }

    class "CsvExport\n(static)" as CsvExport {
        ===  STATIC METHODS  ===
        + {static} IsPathSafe(fullPath, safeDir): bool
        + {static} Export(items: MoneyItem[], path): void
        - {static} EscapeField(value: string): string
    }
}

' ============================================================
' ROW 3 (BOTTOM)  -  DOMAIN
' ============================================================
package "MoneyTracking.Domain" as Domain {

    enum ItemType {
        Income
        Expense
    }

    enum SortField {
        Month
        Amount
        Title
    }

    class "MoneyItem\n(record)" as MoneyItem {
        ===  PROPERTIES  ===
        + Id : Guid
        + Title : string
        + Amount : decimal
        + Month : int
        + Type : ItemType
        ===  CONSTRUCTOR  ===
        + MoneyItem(id, title, amount, month, type)
    }
}

' ============================================================
' LAYOUT CONSTRAINTS
' ============================================================

' 3 rows vertically
ConsoleApp -[hidden]down- Services
Services   -[hidden]down- Domain

' Horizontal ordering hints (split into separate lines to avoid syntax issues)
JsonPersistence -[hidden]- ItemCollection
ItemCollection  -[hidden]- CsvExport
ItemType        -[hidden]- SortField
SortField       -[hidden]- MoneyItem

' ============================================================
' RELATIONSHIPS
' ============================================================

' DOMAIN INTERNAL
MoneyItem "1" *-- "1" ItemType

' SERVICES -> DOMAIN
ItemCollection "1" o-- "*" MoneyItem
ItemCollection ..> SortField
ItemCollection ..> ItemType

JsonPersistence ..> MoneyItem
CsvExport       ..> MoneyItem

' CONSOLE -> SERVICES
Program "1" --> "1" ItemCollection
Program ..> JsonPersistence
Program ..> CsvExport

' CONSOLE -> DOMAIN
Program ..> MoneyItem
Program ..> ItemType
Program ..> SortField

' ============================================================
' NOTES
' ============================================================

note left of ConsoleApp
  **Console UI Layer**
  * Program.cs: top-level menu loop
  * All console I/O lives here
  * Validates input; re-prompts on error
  * Delegates data-work to services
end note

note left of Services
  **Services Layer**
  * ItemCollection: list logic
  * JsonPersistence: JSON I/O
  * CsvExport: CSV export
  * No console dependencies
end note

note left of Domain
  **Domain Layer**
  * Pure business types only
  * No I/O, no external deps
  * MoneyItem = immutable record
  * Enums = type-safe option sets
end note

' Legend - right side, out of the way
note as N_Legend
  **Legend**

  **Notation**
  MoneyItem (record)  = Immutable C# record
  Xxx (static)        = C# static class
  Program (Top-Level) = Top-level statements
  MoneyItem[]         = IReadOnlyList<MoneyItem>

  **Arrows**
  -->   Association (owns / uses)
  ..>   Dependency  (calls / uses)
  o--   Aggregation (has many items)
  *--   Composition (owns exclusively)
end note

N_Legend .right. Domain

@enduml
